# kaggle-movie-genres

./: Dockerfile  LICENSE  README.md  analysis.ipynb  pyproject.toml  train.ipynb
config/: config.yaml
kaggle_movie_genres/: cls_classifier.py  config.py  dataloader.py  evaluation.py  featurizer.py  labelhandler.py  submission.py  trainpredict.py
