[tool.poetry]
name = "kaggle-movie-genres"
version = "0.1.0"
description = "Kaggle NLP text classification project using PyTorch and Hugging Face Transformers"
authors = ["Gábor Bereczki <mr.gabor.bereczki@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"

# Core deep learning & NLP stack
torch = "^2.3.0"
transformers = "^4.45.0"
datasets = "^3.0.0"          # For loading & preprocessing datasets
tokenizers = "^0.20.0"       # Fast Rust tokenizer bindings

# Common Kaggle utilities
pandas = "^2.2.0"
numpy = "^1.26.0"
scikit-learn = "^1.5.0"
tqdm = "^4.66.0"

# Visualization / debugging
matplotlib = "^3.9.0"
seaborn = "^0.13.0"

# if you submit via API or download datasets
kaggle = "^1.6.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.0"
flake8 = "^7.1.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core>=1.8.5"]
build-backend = "poetry.core.masonry.api"


